apps/media/qbittorrent/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.3_v2.0.13-ls469
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: media-pvc
              mountPath: "/media"
            - name: config-pvc
              mountPath: "/config"
          resources:
            requests:
              memory: 2Gi
            limits:
              memory: 2Gi
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media
        - name: config-pvc
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: config-cm
          configMap:
            name: qbittorrent-cm
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - tvinksonas
