apps/media/qbittorrent/metrics-exporter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-qbittorrent-exporter
  labels:
    app: prometheus-qbittorrent-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-qbittorrent-exporter
  template:
    metadata:
      labels:
        app: prometheus-qbittorrent-exporter
      annotations:
        k8s.grafana.com/scrape: "true"
    spec:
      containers:
        - name: prometheus-qbittorrent-exporter
          image: ghcr.io/esanchezm/prometheus-qbittorrent-exporter:v1.7.0
          ports:
            - name: http-metrics
              containerPort: 8000
              protocol: TCP
