apps/media/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  ingressClassName: "cilium"
  rules:
    - host: qbittorrent.g2net.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: http
  tls:
    - hosts:
        - qbittorrent.g2net.xyz
      secretName: g2net-xyz-tls
